name:                timetrack-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/timetrack-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  -- modules directly needed by Main
  exposed-modules:     Lib
                     , Api
  -- modules not needed in Main, and which should not be public
  other-modules:  Config
                , Models
                , Api.TimeEntry
                , Api.User
                , Api.Login
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens-aeson
                     , bytestring
                     , cryptonite
                     , either
                     , jose
                     , lens
                     , monad-logger
                     , mtl
                     , esqueleto
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-auth
                     , servant-auth-client
                     , servant-auth-docs
                     , servant-auth-server == 0.2.1.0
                     , servant-server 
                     , text
                     , time
                     , wai
                     , warp
                       

  default-language:    Haskell2010

executable timetrack-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
    
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timetrack-servant
  default-language:    Haskell2010

test-suite timetrack-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timetrack-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/timetrack-servant
